# Chat-with-your-docs

./: .gitignore  README.md  pyproject.toml
chat-with-your-docs/: generate.py  indexing.py  load.py  main.py  retrieve.py  split.py
src/: generate.py  indexing.py  load.py  main.py  retrieve.py
