[tool.poetry]
name = "retrieval-augmented-generation"
version = "0.1.0"
description = "chat with your knowledge base"
authors = ["Kartheek Yakkala"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
transformers = "^4.38.1"
langchain = "^0.1.9"
huggingface-hub = "^0.21.2"
bs4 = "^0.0.2"
chromadb = "^0.4.24"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
